# PlugOvr

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  deploy_osx.sh  deploy_osx_x86_64.sh  entitlements.plist
.cargo/: config.toml
.github/workflows/: check_everything.yml  create_release.yml
assets/: index.html  logo.icns
crates/plugovr_types/: Cargo.toml
crates/plugovr_types/src/: lib.rs
debian/: postinst
src/: llm.rs  main.rs  ui.rs  usecase_editor.rs  usecase_recorder.rs  usecase_replay.rs  usecase_webserver.rs  version_check.rs  webserver.rs  window_handling.rs
src/ui/: answer_analyser.rs  assistance_window.rs  diff_view.rs  main_window.rs  screen_dimensions.rs  shortcut_window.rs  show_form_fields.rs  template_editor.rs  user_interface.rs
